FI_traces/hipster_shop/product-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - "productcatalogservice.default.svc.cluster.local"
  http:
  - fault:
      abort:
        percentage:
          value: 100.0
        httpStatus: 500
    route:
    - destination:
        host: productcatalogservice
        port:
          number: 3550
  - route:
    - destination:
        host: productcatalogservice
        port:
          number: 3550
